# rockraft

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  rust-toolchain.toml  rustfmt.toml
.github/: kind-config.yaml
.github/workflows/: chaos-test.yaml  ci.yml  daily-test.yml  release.yml
example/: Cargo.toml  Dockerfile  README.md  run_tests.sh  start.sh
example/chaos/crds/: networkchaos-delay.yaml  networkchaos-loss.yaml  networkchaos-partition.yaml  podchaos-kill-follower.yaml  podchaos-kill-leader.yaml
example/conf/: node1.toml  node2.toml  node3.toml
example/k8s/: headless-service.yaml  kustomization.yaml  namespace.yaml  service.yaml  statefulset.yaml
example/k8s/scripts/: entrypoint.sh
example/src/: main.rs
example/test/: README.md  test_chaos.py  test_cluster.py
examples/basic/: Cargo.toml  README.md
examples/basic/conf/: node1.toml  node2.toml  node3.toml
examples/basic/src/: main.rs
examples/cluster/: .gitignore  Cargo.toml  README.md  run_tests.sh  start.sh
examples/cluster/conf/: node1.toml  node2.toml  node3.toml
examples/cluster/src/: main.rs
examples/cluster/test/: README.md  test_cluster.py  test_cluster_members.py
examples/conf/: node3.toml
src/: error.rs  lib.rs
src/config/: config.rs  default.rs  endpoint.rs  mod.rs
src/engine/: mod.rs  rocksdb.rs
src/error/: api_error.rs  grpc_connection_error.rs  management_error.rs  mod.rs  network_error.rs  openraft_error.rs  startup.rs
src/grpc/: client_config.rs  dns_resolver.rs  join_connection_factory.rs  mod.rs
src/network/: mod.rs
src/network/connection/: factory.rs  mod.rs
src/network/pool/: client_pool.rs  mod.rs
src/node/: cluster.rs  forward.rs  leader_handler.rs  mod.rs  node.rs  node_builder.rs  parsed_config.rs
src/raft/: mod.rs
src/raft/grpc_client/: client_pool.rs  mod.rs  raft_service_manager.rs
src/raft/network/: connection.rs  mod.rs
src/raft/proto/: raft.proto
src/raft/store/: keys.rs  log_store.rs  meta.rs  mod.rs  statemachine.rs
src/raft/store/snapshot/: build.rs  mod.rs  recover.rs  util.rs
src/raft/types/: applied_state.rs  encoder.rs  endpoint.rs  formatter.rs  log_entry.rs  message.rs  mod.rs  node.rs  raft_codec.rs  raft_types.rs  sys_data.rs
src/raft/types/cmd/: cmd.rs  meta.rs  mod.rs  operation.rs  time.rs  txn.rs  upsert_kv.rs
src/raft/types/message/: forward.rs  get_members.rs  join.rs  leave.rs  mod.rs
src/rocksdb_engine/: rocksdb.rs
src/service/: mod.rs  raft_service_impl.rs
src/store/: keys.rs  log_store.rs  meta.rs  mod.rs  statemachine.rs
src/store/snapshot/: build.rs  mod.rs  recover.rs  util.rs
src/types/: mod.rs
src/types/raft/: mod.rs  raft_codec.rs  raft_types.rs
src/utils/: mod.rs  test.rs  times.rs
