[package]
name = "rockraft"
version = "0.1.0"
edition = "2024"
description = "A strong consistency KV service library base on Raft and Rocksdb"
keywords = ["raft", "consensus", "rocksdb"]

[dependencies]
bincode = "1.3.3"
byteorder = "1.4.3"
bytes = { version = "1", features = ["serde"] }
futures = "0.3.31"
openraft = { git="https://github.com/databendlabs/openraft.git", rev = "9b6b529", features = ["type-alias", "serde"] }
rocksdb = "0.24.0"
serde = { version = "1.0.114", features = ["derive"] }
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1.41"
zstd = "0.13"