[package]
name = "rockraft"
version = "0.1.0"
edition = "2024"
description = "A strong consistency KV service library base on Raft and Rocksdb"
keywords = ["raft", "consensus", "rocksdb"]

[dependencies]
anyhow = "1.0.98"
bincode = "1.3.3"
byteorder = "1.4.3"
bytes = { version = "1", features = ["serde"] }
dashmap = { version = "6.1.0", features = ["serde"] }
futures = "0.3.31"
mobc = "0.9.0"
openraft = { git="https://github.com/databendlabs/openraft.git", rev = "9b6b529", features = ["type-alias", "serde"] }
prost = "0.13"
rocksdb = { version = "0.24.0", features = ["multi-threaded-cf"] }
serde = { version = "1.0.114", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.47", features = ["full"] }
tonic = "0.12.3"
tracing = "0.1.41"
zstd = "0.13"

[dev-dependencies]
tempfile = "3.9.0"

[build-dependencies]
prost-build = { version = "0.13" }
tonic-build = { version = "0.12.3" }